assets/css/style.css
body {
	font-family: "Patua One", sans-serif;
	margin-top: 100px;
}


/* Navigation Bar */

header {
	position: fixed;
	top: 0px;
	width: 100%;
	z-index: 1;
}

.wrapper-header {
	background-color: #e5aa70;
	margin: 0;
	padding: 0;
	border: 0;
	max-height: 100%;
}

.header {
	margin: 0;
}

.heading-navbar {
	min-height: 100px;
	min-width: 100px;
}

.logo {
	background-image: url(../../assets/images/Cats-Union-monochrome.png);
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
}

.navbar-light {
	background-color: #e5aa70;
}

.navbar {
	min-height: 100px;
	padding: 0px;
	border: 0px;
	margin: 0px;
	width: 100%;
}

.nav-box {
	position: relative;
	bottom: 0;
	right: 0;
	padding: 10px 25px;
	border: 1px;
	margin: 0px;
	font-size: 20px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
}

.nav li {
	font-size: 14px;
	padding: 0;
}

.nav-attach {
	font-size: 0;
}

.nav-box-first {
	background-color: #e5aa70;
	color: black;
}

.nav-box-first:hover {
	background-color: #dd9045;
	color: black;
}

.nav-box-second {
	background-color: #e5aa70;
	color: black;
}

.nav-box-second:hover {
	background-color: #dd9045;
	color: black;
}

.nav-box-third {
	background-color: #e5aa70;
	color: black;
}

.nav-box-third:hover {
	background-color: #dd9045;
	color: black;
}

.nav-box-fourth {
	background-color: #e5aa70;
	color: black;
}

.nav-box-fourth:hover {
	background-color: #dd9045;
	color: black;
}

.nav-box-active {
	background-color: #dd9045;
	color: black;
}


/* Titles and Subtitles used throughout */

.title {
	font-size: 50px;
	text-align: Center;
	padding: 20px;
}

.subtitle {
	font-size: 30px;
	text-align: center;
}

.subtitle a {
	text-decoration: none;
	color: #e5aa70;
}


/* Top captions for images on index, support us and pet advice */

.slogan {
	color: white;
	font-size: 30px;
	position: relative;
	width: 300px;
	height: 200px;
	padding-top: 40px;
	padding-left: 10px;
	bottom: 450px;
	left: 630px;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.support-slogan {
	color: black;
	font-size: 30px;
	position: relative;
	width: 300px;
	height: 200px;
	padding-top: 40px;
	padding-left: 10px;
	bottom: 450px;
	left: 430px;
}

.advice-slogan {
	color: white;
	font-size: 30px;
	position: relative;
	width: 300px;
	height: 200px;
	padding-top: 40px;
	padding-left: 10px;
	bottom: 600px;
	left: 790px;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}


/* Images that fill the page on every page */

.long-image {
	max-height: 603px;
	padding-bottom: 10px;
}


/* Index fore image */

.main-page-background {
	background-image: url(../../assets/images/Cat-poke.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 603px;
	padding-bottom: 10px;
}


/* Index-Adoption Panel */

.adopting-panel {
	min-height: 403px;
	padding-bottom: 10px;
	display: inline-block;
}

.cat-details {
	text-align: Center;
}

.cat-box {
	position: relative;
	padding: 10px 25px;
	border: 0px;
	margin: 0px;
	text-align: center;
	text-decoration: none;
	display: inline-block;
}


/* All small Cat Images */

.cat-image img {
	box-shadow: 0px 0px 10px black;
}


/* Index-Donate panel */

.donate-panel {
	min-height: 603px;
	padding-bottom: 10px;
	background-color: #f0cfaf;
}

.donate-panel a {
	text-decoration: none;
	color: #dd9045;
}

.donate-details {
	text-align: Center;
}

.circle-image {
	position: relative;
	top: 20px;
	text-align: center;
	text-decoration: none;
}

.circle-image img {
	border-width: 1px;
	border-radius: 50%;
}

.left-circle {
	position: relative;
	left: 50px;
}

.middle-circle {
	top: 60px;
}

.right-circle {
	position: relative;
	right: 50px;
}


/* What we do-information panels */

.image-statement {
	text-align: center;
	min-width: 100px;
	max-width: 400px;
	padding: 10px;
	color: black;
	text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
}

.image-statement h2 {
	font-size: 30px;
}

.upper-image {
	background: rgb(0, 0, 0);
	opacity: 0.9;
	background-image: url(../../assets/images/cage-cat.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 600px;
	padding-bottom: 20px;
}

.upper-statement {
	position: relative;
	bottom: 500px;
	left: 1340px;
	background-color: rgba(5, 5, 5, 0.5);
}

.middle-image {
	background: rgb(0, 0, 0);
	opacity: 0.9;
	background-image: url(../../assets/images/Man-with-kitten.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 600px;
	padding-bottom: 20px;
}

.middle-statement {
	position: relative;
	bottom: 510px;
	left: 70px;
	background-color: rgba(66, 48, 7, 0.5);
}

.lower-image {
	background: rgb(0, 0, 0);
	opacity: 0.9;
	background-image: url(../../assets/images/vet-kitten.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 600px;
	padding-bottom: 20px;
}

.lower-statement {
	position: relative;
	bottom: 500px;
	left: 730px;
	background-color: rgba(95, 129, 241, 0.5);
}


/* Support Us-Donate panel */

.support-page-donate-panel {
	background-image: url(../../assets/images/kitten-group.png);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	min-height: 603px;
	padding-bottom: 10px;
	background-color: rgba(0, 0, 0, 0.5);
	opacity: 0.9;
}


/* used following website to figure out how to put borders around letters https://stackoverflow.com/questions/2570972/css-font-border */

.donate-title {
	font-size: 70px;
	font-weight: bold;
	text-align: Center;
	padding: 20px;
	position: relative;
	color: white;
	top: 10px;
	z-index: 1;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

.donate-statement {
	font-size: 35px;
	text-align: Center;
	padding: 0px;
	position: relative;
	color: white;
	top: 10px;
	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}
/* ... */

